# cloudflare-ddns-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  settings.example.json  settings.example.toml
.github/workflows/: build.yml
src/: cloudflare_api.rs  config_parser.rs  domain_record_changer.rs  main.rs
src/api/: mod.rs
src/api/cloudflare/: api.rs  mod.rs
src/config/: cmd.rs  file.rs  mod.rs
systemd/: cloudflare-ddns-rust@.service  cloudflare-ddns-rust@.timer
