[package]
name = "cloudflare-ddns-rust"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["derive"] }
log = "0.4.20"
log4rs = "1.2.0"
rayon = "1.7.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.105"
simple-logging = "2.0.2"
tokio = { version = "1.32.0", features = ["rt", "net", "full"] }
